Changes from current Ant 1.7.0Beta1 version to current SVN version
=============================================================

Changes that could break older environments:
-------------------------------------------

* <script> and <scriptdef> now set the current thread context.

Fixed bugs:
-----------

* <zip filesonly="true"> included empty directories.  Bugzilla report 40258.
* Invalid hash code of Target causes XmlLogger to fail.
  Bugzilla report 40207.

Other changes:
--------------

* added setbeans attribute to <script> to allow <script>'s to be
  run without referencing all references.
  Bugzilla report 37688.
* added classpath attribute and nested element to <script> to allow
  the language jars to be specified in the build script.
  Bugzilla report 29676.

Changes from Ant 1.6.5 to Ant 1.7.0Beta1
========================================

Changes that could break older environments:
-------------------------------------------

* Removed support for xalan1 completely. Users of Xalan1 for Ant builds will
  have to stay at ant 1.6.5 or upgrade to xalan2.

* Use org.apache.log4j.Logger instead of org.apache.log4j.Category.
  Category has been deprecated for ~2 years and has been removed from
  the log4j code.  Logger was introduced in log4j 1.2 so users of
  log4j 1.1 and log4j 1.0 need to upgrade to a newer version of log4j.
  Bugzilla Report 31951.

* build.sysclasspath now also affects the bootclasspath handling of
  spawned Java VMs.  If you set build.sysclasspath to anything other
  than "ignore" (or leave it unset, since "ignore" is the default when
  it comes to bootclasspath handling), then the bootclasspath of the
  VM running Ant will be added to the bootclasspath you've specified.

* The <java fork="false"> now as per default installs a security manager
  using the default permissions. This is now independent of the
  failonerror attribute.  Bugzilla report 33361.

* <signjar> now notices when the jar and signedjar are equal, and switches